running_a_k8s_ingress_kustomize/kubernetes/out.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: kube-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: service1-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: kube-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: service2-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
  namespace: kube-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
  namespace: kube-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service1and2
  namespace: kube-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: service1
            port:
              number: 80
        path: /service1
        pathType: Prefix
      - backend:
          service:
            name: service2
            port:
              number: 80
        path: /service2
        pathType: Prefix
